# django-o365mail

./: .gitignore  CHANGELOD.md  CHANGELOG.md  README.md  setup.cfg  setup.py
sandbox/mail/: apps.py  tests.py  views.py
sandbox/sandbox/: asgi.py  settings.py  urls.py  wsgi.py
sandbox/static/: utf8.txt
src/django_o365mail/: __init__.py  backend.py  file_base.py  file_mimebase.py  file_tuple.py  o365_logger.py  settings.py  util.py
