[metadata]
name = django-o365mail-evyd13
version = 0.0.1
author = Evelien Dekkers
author_email = sixmoonskies@gmail.com
description = A Django email backend to use the O365 API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evyd13/django-o365mail
project_urls =
    Bug Tracker = https://github.com/evyd13/django-o365mail/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires=['O365'],

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src